# quartz

./: .gitignore  .rustfmt.toml  404.html  Cargo.toml  LICENSE.txt  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yaml  gh-pages.yaml
api/: crates.js  search-index.js  settings.html  source-files.js
api/implementors/core/clone/: trait.Clone.js
api/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
api/implementors/core/convert/: trait.From.js
api/implementors/core/fmt/: trait.Debug.js
api/implementors/core/hash/: trait.Hash.js
api/quartz/: all.html  fn.add_two.html  index.html  sidebar-items.js
api/quartz/ir/: enum.IEEEFloat.html  enum.Type.html  index.html  sidebar-items.js  struct.ArrayType.html  struct.BoolType.html  struct.FloatType.html  struct.IntType.html  struct.PtrType.html  struct.StructType.html  struct.TypeLayout.html  trait.IRType.html
api/quartz/prelude/: index.html
api/src/quartz/: lib.rs.html  prelude.rs.html
design/: index.html  overview.html  usage.html
docs/: book.toml
docs/rustdoc/: after.html
docs/src/: SUMMARY.md  index.md
docs/src/design/: index.md  overview.md  usage.md
docs/src/internals/: index.md
docs/src/qir/: design.md  index.md  reference.md
docs/src/tools/: index.md  qcc.md
internals/: index.html
lib/: Cargo.toml
lib/src/: lib.rs  prelude.rs
lib/src/ir/: mod.rs  types.rs
qir/: design.html  index.html  reference.html
tools/: index.html  qcc.html
tools/qcc/: Cargo.toml
tools/qcc/src/: main.rs
(+22 files in other folders)
